# lite_pyd3

./: .gitignore  1problem.py  2StepByStep.py  2plot.py  2problem.py  main.py  pyproject.toml  symbols.py
core_module/: core.py
