[project]
name = "lite-pyd3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "physics-tenpy>=1.0.6",
    "polars>=1.34.0",
    "psutil>=7.1.0", # 用于内存使用监测，tenpy的依赖
    "setuptools>=80.9.0", # submitit的依赖
    "submitit>=1.5.3",
    "sympy>=1.14.0", # 用于符号计算
]
